working sample of GoogleMaps API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <!-- GoogleMaps Javascript API call -->
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdBbWMrt8ROdoblkc2WumUDvx_74VKKn0&callback=initMap">
+    </script>
   </head>
 
   <body>
