start styling - add bootstrap and font-awesome gems, add to asset pipeline

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html ng-app="app">
   <head>
-    <title>PuckerUpAngularRailsApplication</title>
+    <title>PuckerUp by Antonio David</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
 
-    <!-- GoogleMaps Javascript API call -->
+    <!-- GoogleMaps Javascript API -->
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdBbWMrt8ROdoblkc2WumUDvx_74VKKn0&callback=initMap">
     </script>
+    <!-- GoogleFont -->
+    <link href="https://fonts.googleapis.com/css?family=Coustard:400,900" rel="stylesheet">
         
     <%= javascript_include_tag 'application' %>
   </head>
