--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdBbWMrt8ROdoblkc2WumUDvx_74VKKn0&callback=initMap">
     </script>
-    <!-- GoogleFont -->
+    <!-- GoogleFonts -->
     <link href="https://fonts.googleapis.com/css?family=Coustard:400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arvo:400,700" rel="stylesheet">
         
     <%= javascript_include_tag 'application' %>
   </head>
