add background image and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,9 @@
   <head>
     <title>PuckerUp by Antonio David</title>
     <%= csrf_meta_tags %>
+    
+    <!-- additional meta tag to trigger responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
 
