style landing page 'home' state

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -9,18 +9,26 @@ html {
     background-position: center center;
 }
 
-body {
-    font-family: “Arvo",serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Ubuntu","HelveticaNeue","Helvetica Neue”,sans-serif;
-    font-weight: 700;
+div#main-container {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: 'Coustard', serif;
+        font-weight: 400
+    }
+    p {
+        font-family: 'Arvo', serif;
+        font-size: 1.75em
+    }
+    div#definition {
+        text-align: center
+    }
+    button {
+        font-family: 'Coustard', serif
+    }
 }
 
 .wrapper {
