--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -2,11 +2,13 @@ body,
 html {
     width: 100%;
     height: 100%;
-    margin: 0;
-    background-image: url(<%= asset_path 'background/beer-medium-trim.png' %>);
+    background-image: url(<%= asset_path 'background/beer-medium-trimmed.png' %>);
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center center
 }
 
 div#main-container {
@@ -21,25 +23,14 @@ div#main-container {
     }
     p {
         font-family: 'Arvo', serif;
-        font-size: 1.75em
     }
     div#definition {
-        text-align: center
+        text-align: center;
+        p {
+            font-size: 1.75em;
+        }
     }
     button {
         font-family: 'Coustard', serif
     }
-}
-
-.wrapper {
-    min-height: 100%;
-    margin-bottom: -100px
-}
-
-.footer, .push {
-    height: 100px
-}
-
-.footer {
-    height: 100px
 }
