--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -7,4 +7,11 @@
       color: #f28f00;
       text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
   }
+  li span.user {
+      color: #777;
+      position: relative;
+      display: block;
+      padding: 15px 15px
+
+  }
 }
