finish styling breweries show 'home.create'

--- a/app/assets/stylesheets/breweries.css.scss.erb
+++ b/app/assets/stylesheets/breweries.css.scss.erb
@@ -19,3 +19,9 @@ a.brewery-link {
     color: black;
     text-decoration: none
 }
+
+div#brewery-show {
+    div.panel-footer {
+        font-family: 'Arvo', serif;
+    }
+}
