adjust background image for responsiveness across all pages

--- a/app/assets/stylesheets/breweries.css.scss.erb
+++ b/app/assets/stylesheets/breweries.css.scss.erb
@@ -3,16 +3,9 @@ div#breweries-index {
         text-align: center
     }
     table {
-        font-family: 'Arvo', serif;
+        font-family: 'Droid Sans', sans-serif;
         background-color: #fafafa 
     }
-    background-image: url(<%= asset_path 'background/beer-medium-trimmed.png' %>);
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center
 }
 
 a.brewery-link {
@@ -22,6 +15,6 @@ a.brewery-link {
 
 div#brewery-show {
     div.panel-footer {
-        font-family: 'Arvo', serif;
+        font-family: 'Droid Sans', sans-serif;
     }
 }
