--- a/app/assets/stylesheets/map.css.scss.erb
+++ b/app/assets/stylesheets/map.css.scss.erb
@@ -6,16 +6,9 @@ div#brewery-map {
         font-size: 1.5em
     }
     ul {
-        font-family: 'Arvo', serif;
+        font-family: 'Droid Sans', sans-serif;
         font-size: 1.25em
     }
-    background-image: url(<%= asset_path 'background/beer-medium-trimmed.png' %>);
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center
 }
 
 #map {
