--- a/app/assets/stylesheets/navbar.css.scss.erb
+++ b/app/assets/stylesheets/navbar.css.scss.erb
@@ -1,7 +1,8 @@
 #main-navbar {
-  background: #ffffff;
-  font-family: 'Coustard', serif; 
-  font-weight: 400;
+  background-image: url(<%= asset_path 'background/beer-dark-foam.png' %>);
+  background-position: 0px 100px;
+  font-family: 'Droid Sans', sans-serif; 
+  font-weight: 700;
   a.navbar-brand {
       font-size: 2em;
       color: #f28f00;
