--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,5 +1,5 @@
 div.form {
-    font-family: 'Arvo', serif;
+    font-family: 'Droid Sans', sans-serif;
     background-color: #fafafa; 
     h1 {
         text-align: center;
