--- a/app/assets/stylesheets/navbar.css.scss.erb
+++ b/app/assets/stylesheets/navbar.css.scss.erb
@@ -1,5 +1,5 @@
 #main-navbar {
-  background-image: url(<%= asset_path 'background/beer-dark-foam.png' %>);
+  background: url(<%= asset_path 'background/beer-dark-foam.png' %>);
   background-position: 0px 100px;
   font-family: 'Droid Sans', sans-serif; 
   font-weight: 700;
@@ -14,5 +14,16 @@
       display: block;
       padding: 15px 15px
 
+  }
+}
+
+@media(max-width: 767px) {
+  #main-navbar {
+      background: url(<%= asset_path 'background/beer-dark-foam.png' %>);
+      background-position: center center;
+      background-size: cover;
+      ul.nav li a {
+          color: #000000
+      }
   }
 }
