--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     </script>
     <!-- GoogleFonts -->
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Coustard:400,900" rel="stylesheet">
         
     <%= javascript_include_tag 'application' %>
   </head>
