adjust background image to make sure works with footer

--- a/app/assets/stylesheets/breweries.css.scss.erb
+++ b/app/assets/stylesheets/breweries.css.scss.erb
@@ -6,6 +6,13 @@ div#breweries-index {
         font-family: 'Droid Sans', sans-serif;
         background-color: #fafafa 
     }
+    background: url(<%= asset_path 'background/beer-dark-trimmed.png' %>);
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center
 }
 
 a.brewery-link {
