--- a/app/assets/stylesheets/map.css.scss.erb
+++ b/app/assets/stylesheets/map.css.scss.erb
@@ -9,6 +9,13 @@ div#brewery-map {
         font-family: 'Droid Sans', sans-serif;
         font-size: 1.25em
     }
+    background: url(<%= asset_path 'background/beer-dark-trimmed.png' %>);
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center
 }
 
 #map {
