add media query to adjust background image below 768px

--- a/app/assets/stylesheets/footer.css.scss.erb
+++ b/app/assets/stylesheets/footer.css.scss.erb
@@ -1,5 +1,5 @@
 footer {
-    padding: 15px 0;
+    padding: 15px 0px;
     background: url(<%= asset_path 'background/light-wood-texture.png' %>);
     background-size: cover;
     -webkit-background-size: cover;
