--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -47,6 +47,18 @@ div#definition {
     }
 }
 
+@media(max-width: 767px) {
+    div#main-container {
+        background: url(<%= asset_path 'background/beer-dark-trimmed.png' %>);
+        background-size: cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center
+    }
+}
+
 .wrapper {
     min-height: 100%;
     margin-bottom: -75px;
